welcome.lessons.welcome.loopfor.LoopFor.scala.code
var nbPas=0
var compteur=0
while (estSurBiscuit==false){
  avance()
  nbPas = nbPas + 1
}
for (compteur <- 0 to nbPas) {
  recule()
  compteur = compteur + 1
}